# cascadia-ai

./: .dockerignore  .gitignore  AGENTS.md  CASCADIA_V2_GOAL.txt  CASCADIA_V3_GOAL.txt  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.v3  Makefile  README.md  STATE.md  WAKEUP_FOLLOWUPS.md  architecture_proposal_critiques_7_16.md  cascadia_foundry_original_architecture_proposal_7_16.md  cascadia_rival_final_architecture_proposal_7_16.md  cascadia_rival_implementation_plan_7_16.md  cascadia_rival_premerit_build_scope_7_16.md  champion_server.sh  claude_max_research_ideas.md  fleet5_gen.sh  generate_report.sh  handoff-2026-06-17.md  incumbent_anchored_gpu_rollout_policy_improvement_7_16.md  modal_collect.py  orchestrator-rewrite.md  overnight_results.md  pyproject.toml  research_answers_7_16.md  research_questions_7_16.md  restart_training_correct_lr.sh  run_iter20_sweep.sh  run_iter_history.sh  run_overnight_benches.sh  run_overnight_benches_v2.sh  selfplay_stats.py  stochastic_board_game_ai_architecture_research_7_16.md  train_gnn_iter.py  train_hybrid.py  train_pytorch.py  (+5 more)
cascadiav3/real-root-exporter/: Cargo.toml
cascadiav3/real-root-exporter/src/: feature_tensors.rs  gumbel.rs  main.rs  model_bridge.rs  npz_writer.rs
crates/cascadia-ai/: Cargo.toml
crates/cascadia-ai/src/: eval.rs  expectimax.rs  greedy_ub.rs  gumbel_mcts.rs  lib.rs  mce.rs  mcts.rs  mcts_tree.rs  nnue.rs  nnue_train.rs  nrpa.rs  ntuple.rs  ol_mcts.rs  policy_net.rs  potential.rs  search.rs  train.rs  uct_mcts.rs  wildlife_candidates.rs
crates/cascadia-api/: Cargo.toml
crates/cascadia-api/src/: champion.rs  cluster.rs  cluster_experiments.rs  cluster_history.rs  cluster_queue.rs  cluster_r2_map.rs  lib.rs  main.rs
crates/cascadia-cli/: Cargo.toml
crates/cascadia-cli-v2/: Cargo.toml
crates/cascadia-cli-v2/src/: basic_data_commands.rs  candidate_recall.rs  cli.rs  counterfactual.rs  counterfactual_advantage.rs  lookahead_commands.rs  main.rs  oracle_commands.rs  pattern_potential.rs  policy_commands.rs  public_beam_data_commands.rs  public_beam_probe.rs  r2_map_commands.rs  ranking_data.rs  ranking_data_commands.rs  ranking_model_commands.rs  report.rs  value_model_commands.rs
crates/cascadia-cli/src/: main.rs
crates/cascadia-data/: Cargo.toml
crates/cascadia-data/src/: action_ranking.rs  conservative_advantage.rs  counterfactual_advantage.rs  counterfactual_value.rs  graded_oracle.rs  imitation.rs  imitation_parent_prior.rs  imitation_targets.rs  lib.rs  opponent_intent.rs  opportunity_graph.rs  public_beam_value.rs  public_supply.rs  r2_map_collector.rs  r2_map_experience.rs  ranking.rs  rollout_value.rs  score_to_go.rs  semantic_supply.rs  spatial_representation.rs
crates/cascadia-differential/: Cargo.toml
crates/cascadia-differential/src/: full_legal_audit.rs  legacy_teacher.rs  lib.rs  r2_map_cross_arch_focal.rs  state_footprint.rs
crates/cascadia-differential/tests/: trusted_fixtures.rs
crates/cascadia-eval/: Cargo.toml
crates/cascadia-eval/src/: focal.rs  focal_campaign.rs  focal_gameplay.rs  lib.rs  longitudinal.rs  r2_map_binding.rs  r2_map_gameplay.rs
crates/cascadia-game/: Cargo.toml
crates/cascadia-game/benches/: engine.rs
crates/cascadia-game/src/: board.rs  game.rs  hex.rs  lib.rs  market.rs  replay.rs  scoring.rs  symmetry.rs  tile_catalog.rs  types.rs
crates/cascadia-game/tests/: alt_card_scoring.rs  random_game_bench.rs
crates/cascadia-model/: Cargo.toml
crates/cascadia-model/src/: lib.rs  r2_map.rs
crates/cascadia-r2/: Cargo.toml  README.md
crates/cascadia-r2/src/: census.rs  codec.rs  incremental.rs  lib.rs  main.rs  mlx_export.rs  model.rs  r2_map_dataset.rs  r2_map_runtime.rs
crates/cascadia-r2/tests/: adversarial.rs  foundation.rs  mlx_export.rs
crates/cascadia-rival/: Cargo.toml  README.md
crates/cascadia-rival/src/: action_id.rs  bounds.rs  compiler.rs  digest.rs  dynamic_urn.rs  golden_trace.rs  identity.rs  ingest_exporter.rs  ledger.rs  lib.rs  menu.rs  observation.rs  policy.rs  rng.rs  ruleset_identity.rs  scenario.rs  terminal.rs  tomography.rs  tomography_harness.rs  tomography_repack.rs  tomography_replay.rs
crates/cascadia-rival/tests/: cpu_reference_battery.rs  ingest_exporter.rs  rival_contract_cli.rs  rival_ingest_exporter_cli.rs  rival_tomography_cli.rs  tomography_optimizers.rs
crates/cascadia-search/: Cargo.toml
crates/cascadia-search/src/: action_ranking.rs  habitat_ranking.rs  lib.rs  lookahead.rs  mlx_prefilter.rs  mlx_ranking_rollout.rs  mlx_value.rs  offline_public_belief.rs  oracle.rs  oracle_tests.rs  pattern_rollout.rs  policy_improvement.rs  policy_improvement_tests.rs  public_tree.rs  r2_map_direct.rs  r2_map_runner.rs  ranking_prediction.rs  search_tests.rs
crates/cascadia-sim/: Cargo.toml
crates/cascadia-sim/benches/: matches.rs
crates/cascadia-sim/examples/: profile_rollout.rs
crates/cascadia-sim/src/: lib.rs  pattern.rs  pattern_opportunity.rs  pattern_tests.rs
crates/cascadia-sim/tests/: bench_hot_paths.rs
crates/cascadia-v3-nnue/: Cargo.toml
crates/cascadia-v3-nnue/src/: accumulator.rs  campaign.rs  features.rs  lib.rs  model.rs  schema.rs  search.rs  teacher.rs  training.rs
crates/cascadia-web/: Cargo.toml
crates/cascadia-web/src/: index.html  main.rs
tools/f5_corrected_tail_activation_census/: Cargo.toml  README.md  build.rs
tools/f5_corrected_tail_activation_census/src/: census.rs  corpus.rs  lib.rs  main.rs  model.rs  source.rs  strict_json.rs
tools/full_legal_roundtrip_validator/: Cargo.toml
tools/o1_public_belief_search/: Cargo.toml
tools/o1_ranking_afterstate_exporter/: Cargo.toml  README.md
tools/o2_opportunity_foundation/: Cargo.toml
tools/public_action_equivalence_census/: Cargo.toml  README.md
tools/r2_sparse_entity_census/: Cargo.toml  README.md
tools/r3_action_edit_census/: Cargo.toml  README.md
tools/r3_action_edit_mlx_exporter/: Cargo.toml  README.md
tools/r4_adaptive_multires_census/: Cargo.toml  README.md  README_MLX_PARENT.md
tools/relational_feature_census/: Cargo.toml  README.md
tools/s1_exact_supply_mlx_exporter/: Cargo.toml  README.md
(+3014 files in other folders)
