[workspace]
members = [
    "legacy/crates/cascadia-core",
    "legacy/crates/cascadia-ai",
    "legacy/crates/cascadia-cli",
    "legacy/crates/cascadia-web",
    "crates/cascadia-game",
    "crates/cascadia-sim",
    "crates/cascadia-eval",
    "crates/cascadia-data",
    "crates/cascadia-model",
    "crates/cascadia-search",
    "crates/cascadia-api",
    "crates/cascadia-cli-v2",
    "crates/cascadia-differential",
    "crates/cascadia-provenance",
    "crates/cascadia-r2",
    "crates/cascadia-v3-nnue",
]
resolver = "2"

[workspace.dependencies]
arrayvec = "0.7"
axum = "0.8"
blake3 = "1.8"
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
crossterm = "0.28"
postcard = { version = "1.1", features = ["alloc"] }
proptest = "1.7"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
zerocopy = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
