[workspace]
members = [
    "crates/cascadia-game",
    "crates/cascadia-sim",
    "crates/cascadia-eval",
    "crates/cascadia-data",
    "crates/cascadia-model",
    "crates/cascadia-search",
    "crates/cascadia-provenance",
]
exclude = [
    "cascadiav3/real-root-exporter",
]
resolver = "2"

[workspace.dependencies]
arrayvec = "0.7"
blake3 = "1.8"
criterion = "0.5"
postcard = { version = "1.1", features = ["alloc"] }
proptest = "1.7"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
