[workspace]
members = [
    "crates/cascadia-game",
    "crates/cascadia-sim",
    "crates/cascadia-eval",
    "crates/cascadia-data",
    "crates/cascadia-model",
    "crates/cascadia-search",
    "crates/cascadia-provenance",
    "crates/cascadia-api",
    "crates/cascadia-rival",
]
exclude = [
    "cascadiav3/real-root-exporter",
]
resolver = "2"

[workspace.dependencies]
arrayvec = "0.7"
blake3 = "1.8"
criterion = "0.5"
postcard = { version = "1.1", features = ["alloc"] }
proptest = "1.7"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.11"
rustc-hash = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
