[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "cascadia-ai"
version = "0.1.0"
description = "Cascadia v3 transformer tooling and Bacalhau cluster helpers"
requires-python = ">=3.12,<3.13"
dependencies = [
    "blake3>=1.0,<2",
    "numpy>=2.2,<3",
]

[project.scripts]
cascadia-cluster-manifest = "cascadia_cluster.manifest_writer:main"

[dependency-groups]
dev = [
    "pytest>=8.4,<10",
    "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["python/cascadia_cluster", "cascadiav3/src/cascadiav3"]

[tool.pytest.ini_options]
testpaths = ["tests/cluster_unit"]
addopts = ["--strict-markers", "-ra"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
