[package]
name = "cascadia-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Canonical local API and application services for Cascadia v2"

[dependencies]
axum.workspace = true
blake3.workspace = true
cascadia-game = { path = "../cascadia-game" }
cascadia-search = { path = "../cascadia-search" }
cascadia-sim = { path = "../cascadia-sim" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
postcard.workspace = true
