[package]
name = "cascadia-eval"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Canonical Cascadia v2 benchmark protocol and statistics"

[dependencies]
blake3.workspace = true
cascadia-game = { path = "../cascadia-game" }
cascadia-data = { path = "../cascadia-data" }
cascadia-model = { path = "../cascadia-model" }
cascadia-search = { path = "../cascadia-search" }
cascadia-sim = { path = "../cascadia-sim" }
clap.workspace = true
libc = "0.2"
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
