[package]
name = "cascadia-web"
version = "0.1.0"
edition = "2021"

[dependencies]
cascadia-core = { path = "../cascadia-core" }
cascadia-ai = { path = "../cascadia-ai" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
