[package]
name = "full-legal-roundtrip-validator"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace]

[dependencies]
cascadia-differential = { path = "../../crates/cascadia-differential", features = ["legacy-teacher"] }
serde_json = { version = "=1.0.149", features = ["float_roundtrip"] }
