[package]
name = "o2-opportunity-foundation"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blake3 = "1.8"
cascadia-data = { path = "../../crates/cascadia-data" }
cascadia-game = { path = "../../crates/cascadia-game" }
cascadia-search = { path = "../../crates/cascadia-search" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[workspace]
