[package]
name = "public-action-equivalence-census"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace]

[dependencies]
blake3 = "1.8"
cascadia-data = { path = "../../crates/cascadia-data" }
cascadia-game = { path = "../../crates/cascadia-game" }
clap = { version = "4", features = ["derive"] }
r3-action-edit-census = { path = "../r3_action_edit_census" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[dev-dependencies]
tempfile = "3"
