[package]
name = "r3-action-edit-census"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace]
members = ["r2_public_adapter"]

[dependencies]
blake3 = "1.8"
cascadia-data = { path = "../../crates/cascadia-data" }
cascadia-game = { path = "../../crates/cascadia-game" }
clap = { version = "4", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
r2-sparse-entity-census = { package = "r2-public-token-adapter", path = "r2_public_adapter" }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
