[package]
name = "r4-adaptive-multires-census"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace]

[dependencies]
blake3 = "1.8"
cascadia-data = { path = "../../crates/cascadia-data" }
cascadia-game = { path = "../../crates/cascadia-game" }
cascadia-provenance = { path = "../../crates/cascadia-provenance" }
clap = { version = "4", features = ["derive"] }
r2-sparse-entity-census = { package = "cascadia-r2", path = "../../crates/cascadia-r2" }
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
thiserror = "2.0"

[dev-dependencies]
proptest = "1.7"
