[package]
name = "s1_exact_supply_mlx_exporter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blake3 = "1.8"
cascadia-data = { path = "../../crates/cascadia-data" }
cascadia-game = { path = "../../crates/cascadia-game" }
cascadia-provenance = { path = "../../crates/cascadia-provenance" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]

